# GamesmanROS

./: README.md
CAD/: RobotBoard.ai  new-piece-1_30_25.stl
app/: app.py  app1.py
catkin_ws/: .gitignore
catkin_ws/src/gamesmanros/: CMakeLists.txt  package.xml
catkin_ws/src/gamesmanros/launch/: controller.launch  main.launch  robot_tf.launch  spawn_all_pieces.launch  spawn_piece.launch  tf_bringup.launch
catkin_ws/src/gamesmanros/src/: artag_listener.py  centers.py  findPiece.py  joint_states.py  joint_trajectory.py  low_level_controller.py  main.py  robotControl.py  transformBroadcast.py
catkin_ws/src/lab4_cam/launch/: ar_track.launch
catkin_ws/src/mycobot_280/mycobot_280/scripts/: follow_display.py  follow_display_gripper.py
catkin_ws/src/mycobot_280/mycobot_280_gripper_moveit/launch/: mycobot_moveit.launch
catkin_ws/src/mycobot_280/mycobot_280_moveit/: CMakeLists.txt  package.xml
catkin_ws/src/mycobot_280/mycobot_280_moveit/config/: controllers.yaml  firefighter.srdf  gazebo_firefighter.urdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
catkin_ws/src/mycobot_280/mycobot_280_moveit/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  firefighter_moveit_controller_manager.launch  gazebo.launch  move_group.launch  mycobot_moveit.launch  pilz_industrial_motion_planner_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robot_moveit_controller_manager.launch  ros_control_moveit_controller_manager.launch.xml  ros_controllers.launch  simple_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml
catkin_ws/src/mycobot_280/mycobot_280_moveit/scripts/: sync_plan.py
catkin_ws/src/mycobot_280/mycobot_280pi/scripts/: follow_display.py
catkin_ws/src/mycobot_280/mycobot_280pi_moveit/: CMakeLists.txt  package.xml
catkin_ws/src/mycobot_280/mycobot_280pi_moveit/config/: firefighter.srdf  kinematics.yaml  ros_controllers1.yaml  simple_moveit_controllers.yaml
catkin_ws/src/mycobot_280/mycobot_280pi_moveit/launch/: move_group.launch  mycobot_moveit.launch  planning_context.launch  ros_controllers.launch  trajectory_execution.launch.xml
catkin_ws/src/mycobot_280/mycobot_moveit_config/: .setup_assistant  CMakeLists.txt  controller_moveit_plugin.xml  package.xml
catkin_ws/src/mycobot_280/mycobot_moveit_config/config/: fake_controllers.yaml  firefighter.srdf  ros_controllers.yaml  stomp_planning.yaml
catkin_ws/src/mycobot_280/mycobot_moveit_config/launch/: gazebo.launch  move_group.launch  planning_context.launch  ros_control_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml
catkin_ws/src/mycobot_communication/scripts/: mycobot_topics_pi.py
config/: automate_tmux.sh  ssh_automation.exp
(+67 files in other folders)
